fixed various elements on the front page

--- a/app/templates/functions/navbar.twig
+++ b/app/templates/functions/navbar.twig
@@ -6,7 +6,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="brand" href="{{base}}">{{name}}</a>
+			<a class="brand" href="{{base}}">{{brand}}</a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
 					<li{% if path.0 == "rage" %} class="active"{% endif %}><a href="{{base}}rage">{% trans %}Clonk Rage{% endtrans %}</a></li>
