--- a/app/templates/elements/footer.twig
+++ b/app/templates/elements/footer.twig
@@ -1,6 +1,6 @@
 <hr>
 <footer>
     <p class="visible-phone">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
-    {% if __notice %}<p><strong>{{notice}}</strong></p>{% endif %}
-    <p class=""><a class="text" href="{{base}}">{{name}}</a> &copy; {{current_year}}<span class="muted"> &middot; <a class="text" href="{{base}}about">{% trans "About the project" %}</a> &middot; <a class="text" href="{{base}}contact">{% trans "Contact" %}</a><span class="hidden-phone">{% if __trademark %} &middot; {{__trademark|raw}}{% endif %}</span></span>.</p>
+    {% if site_notice %}<p><strong>{{site_notice}}</strong></p>{% endif %}
+    <p class=""><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}}<span class="muted"> · <a class="text" href="{{base}}/about">{% trans "About the project" %}</a> · <a class="text" href="{{base}}contact">{% trans "Contact" %}</a><span class="hidden-phone">{% if site_trademark %} · {{site_trademark|raw}}{% endif %}</span></span>.</p>
 </footer>
