--- a/app/templates/elements/head.twig
+++ b/app/templates/elements/head.twig
@@ -1,10 +1,10 @@
 <head lang="{% trans "en" %}">
     <meta charset="utf-8">
-    <title>{% trans "Lorry" %}</title>
+    <title>{{brand}}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="shortcut icon" href="{{base}}img/favicon.ico" type="image/x-icon">
-    <link href="{{base}}css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{base}}css/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="{{base}}css/lorry.min.css" rel="stylesheet">
+	<link rel="shortcut icon" href="{{base}}/img/favicon.ico" type="image/x-icon">
+    <link href="{{base}}/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{base}}/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="{{base}}/css/lorry.min.css" rel="stylesheet">
 </head>
