--- a/app/templates/functions/navbar.twig
+++ b/app/templates/functions/navbar.twig
@@ -14,7 +14,7 @@
 					<li{% if path.0 == "publish" %} class="active"{% endif %}><a href="{{base}}/publish">{% trans 'Publish' %}</a></li>
 				</ul>
 				<ul class="nav pull-right">
-				{% if __session %}<li{% if path.0 == "user" and path.1|lower == __username|lower %} class="active"{% endif %}><a href="{{__profile}}">{{__username}}</a></li>
+				{% if user_login %}<li{% if path.0 == "user" and path.1|lower == user_login|lower %} class="active"{% endif %}><a href="{{user_profile}}">{{user_name}}</a></li>
 						<li{% if path.0 == "settings" %} class="active"{% endif %}><a href="{{base}}/settings">{% trans 'Settings' %}</a></li>
 						<li{% if path.0 == "logout" %} class="active"{% endif %}><a href="{{base}}/logout">{% trans 'Logout' %}</a></li>
 		    {% else %}<li{% if path.0 == "register" %} class="active"{% endif %}><a href="{{base}}/register">{% trans 'Register' %}</a></li>
