--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -15,7 +15,7 @@
 			<label for="password-repeat"></label>
 			<input type="password" class="input-block-level" name="password-repeat" id="password-repeat" placeholder="{%trans "Confirm password" %}">
 			<button class="btn btn-large btn-primary" type="submit">{% trans "Register" %}</button>
-			<a href="{{base}}login" class="btn btn-link">{% trans "Already registered?" %}</a>
+			<a href="{{base}}/login" class="btn btn-link">{% trans "Already registered?" %}</a>
 		</form>
 		<hr>
 		<div class="social">
