--- a/app/templates/elements/js.twig
+++ b/app/templates/elements/js.twig
@@ -1,7 +1,7 @@
-<script src="{{base}}js/jquery.min.js"></script>
-<script src="{{base}}js/bootstrap.min.js"></script>
-<script src="{{base}}js/yepnope.min.js"></script>
-<script src="{{base}}js/lorry.js"></script>
+<script src="{{base}}/js/jquery.min.js"></script>
+<script src="{{base}}/js/bootstrap.min.js"></script>
+<script src="{{base}}/js/yepnope.min.js"></script>
+<script src="{{base}}/js/lorry.js"></script>
 {% if scripts %}<script>
 	{% for script in scripts %}
 		{{ script | raw }}
@@ -11,8 +11,8 @@
 yepnope({
     test: ('placeholder' in $('<input>')[0]),
     nope: [
-            '{{base}}poly/placeholder_polyfill.min.css',
-            '{{base}}poly/placeholder_polyfill.jquery.min.combo.js'
+            '{{base}}/poly/placeholder_polyfill.min.css',
+            '{{base}}/poly/placeholder_polyfill.jquery.min.combo.js'
           ]
 });
 </script>
