--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -8,7 +8,7 @@
 		<h3>{% trans %}Fan page{% endtrans %}</h3>
 		<p>{% trans %}We're here as the fans of Clonk. We built this site as members of the community for "our" game.{% endtrans %}</p>
 		<p>{% trans %}This site is for new players to learn all about Clonk, to discover the huge database of addons and to help them get right into the game.{% endtrans %}</p>
-		<p><a href="{{base}}about/clonk" class="btn btn-primary">{% trans "Learn all about Clonk" %}</a></p>
+		<p><a href="{{base}}/clonk" class="btn btn-primary">{% trans "Learn all about Clonk" %}</a></p>
     </div>
     <div class="span4">
 		<hr class="visible-phone">
@@ -23,7 +23,7 @@
 		<p>{% trans %}The official Clonk site is not really up to date anymore and fails to highlight one of the best features of Clonk as such: the awesome Community and its creations.{% endtrans %}</p>
 		<p>{% trans %}We want to share our own creations easily and give the addon developers our important feedback.{% endtrans %}</p>
 		{% if session %}<p><a href="{{profile}}" class="btn btn-primary">{% trans "View your profile"%}</a></p>
-		{% else %}<p><a href="{{base}}register" class="btn btn-primary">{% trans "Register now"%}</a></p>{% endif %}
+		{% else %}<p><a href="{{base}}/register" class="btn btn-primary">{% trans "Register now"%}</a></p>{% endif %}
 	</div>
 </div>
 <hr>
@@ -64,7 +64,7 @@
 			<dd>{% trans %}early feedback and thoughts{% endtrans %},</dd>
 			<br>
 			<div class="head">
-				<dt><a href="https://beheh.de"><img src="{{base}}img/benedict.png">Benedict Etzel</a> <span class="muted">(<a href="{{base}}user/B_E" class="muted">B_E</a>)</span></dt>
+				<dt><a href="https://beheh.de"><img src="{{base}}/img/benedict.png">Benedict Etzel</a> <span class="muted">(<a href="{{base}}/users/B_E" class="muted">B_E</a>)</span></dt>
 				<dd>{% trans %}idea &amp; development{% endtrans %}.</dd>
 			</div>
 		</dl>
