--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -7,7 +7,7 @@
 <div class="row-fluid">
     <div class="span4">
 		<h3>{% trans %}Clonk Rage{% endtrans %}</h3>
-		<p><img src="{{base}}img/logo_clonkrage.png"></p>
+		<p><img src="{{base}}/img/logo_clonkrage.png"></p>
 		<p>{% trans %}The classic game with hundreds of community-built, high-quality addons. Magical wars, strategic shooters and futuristic settling: Clonk Rage has it all.{% endtrans %}</p>
 		<p>{% trans %}Often the sheer selection is overwelming, so be sure to spread the word and vote for the addons you like.{% endtrans %}</p>
 		<p>
@@ -17,7 +17,7 @@
     </div>
     <div class="span4">
 		<h3>{% trans %}OpenClonk{% endtrans %}</h3>
-		<p><img src="{{base}}img/logo_openclonk.png"></p>
+		<p><img src="{{base}}/img/logo_openclonk.png"></p>
 		<p>{% trans %}The opensource successor to the Clonk series, built by players and developers of the previous Clonk titles.{% endtrans %}</p>
 		<p>{% trans %}Although the addon selection is still limited, OpenClonk completely reimaginges a great part of the game and greatly refines the technology, now supporting three-dimensional models within the game.{% endtrans %}</p>
 		<p>
@@ -38,7 +38,7 @@
 		<h2>{% trans %}Create new content for Clonk{% endtrans %}</h2>
 		<p>{% trans %}The official game development of Clonk Rage is currently halted, therefore the community is creating an open source succesor - OpenClonk. Both games are different and alike, but the majority of all addons have been created for Clonk Rage. Once you've created something awesome you can distribute it via Lorry, making it instantly available for any interested player.{% endtrans %}</p>
 		<p>
-			<a href="{{base}}publish/index.html" class="btn btn-success">{% trans "Publish your addon" %}</a>
+			<a href="{{base}}/publish/index.html" class="btn btn-success">{% trans "Publish your addon" %}</a>
 			<a href="#" class="btn">{% trans %}Learn more{% endtrans %}</a>
 		</p>
     </div>
@@ -47,7 +47,7 @@
 		<h2>{% trans %}Build the next Clonk{% endtrans %}</h2>
 		<p>{% trans %}The OpenClonk project is constantly looking for developers to help out with the next iteration of Clonk. If you have moderate or even advanced C++-skills you should definitively be welcome in the team.{% endtrans %}</p>
 		<p>
-			<a href="http://forum.openclonk.org" class="btn btn-info">{% trans %}Visit the OpenClonk forum{% endtrans %}</a>
+			<a href="http://forum.openclonk.org" class="btn btn-info">{% trans %}Visit the OpenClonk forums{% endtrans %}</a>
 		</p>
     </div>
 </div>
