--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -1,7 +1,7 @@
 {% extends 'root.twig' %}
 
 {% block content %}
-<h1>{% trans "Contact" %}</h1>
+<h1>{% trans "Contact us" %}</h1>
 <div class="row-fluid">
     <div class="span8">
 		<h3>{% trans %}We &hearts; feedback{% endtrans %}</h3>
