--- a/app/templates/functions/openid.twig
+++ b/app/templates/functions/openid.twig
@@ -1,6 +1,13 @@
 <p>
-	<a href="#" class="btn btn-openid">{% trans "OpenID" %}</a>
+	<a href="#" class="btn btn-openid" data-toggle="collapse" data-target="#link-openid">{% trans "OpenID" %}</a>
 	<a href="#" class="btn btn-google">{% trans "Google" %}</a>
 	<a href="#" class="btn btn-facebook">{% trans "Facebook" %}</a>
 	<a href="#" class="btn btn-twitter">{% trans "Twitter" %}</a>
 </p>
+<div class="collapse" id="link-openid">
+	<form action="" method="post" class="form-inline">
+		<label for="openid"></label>
+		<input type="text" name="openid-provider" placeholder="{% trans %}OpenID url{% endtrans %}" required>
+		<button type="submit" class="btn btn-primary">{% trans %}Confirm{% endtrans %}</button>
+	</form>
+</div>
