tidying up codebase

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -136,6 +136,14 @@ a.hero-unit:hover {
 	margin-bottom: 40px;
 }
 
+#settings h4 {
+	margin-top: 40px;
+}
+
+#settings h2 + h4 {
+	margin-top: 20px;
+}
+
 .form-login, .form-register {
 	margin-top: 10px;
 	.checkbox {
@@ -158,6 +166,10 @@ a.hero-unit:hover {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	height: 28px;
+	width: 100%;
+}
+
+.form-horizontal .btn {
 	width: 100%;
 }
 
