--- a/app/templates/publish/table.twig
+++ b/app/templates/publish/table.twig
@@ -5,8 +5,8 @@
 <div class="row-fluid">
 	<div class="span12">
 		<h2>{% trans %}Your addons{% endtrans %}</h2>
-		<div class="alert alert-warning">{% trans %}You have not created page for an addon yet. Get started now!{% endtrans %}</div>
-		<a href="{{base}}publish/create" class="btn btn-success">{% trans %}Create a new addons page{% endtrans %}</a>
+		<div class="alert alert-warning">{% trans %}You have not created an addon yet. Get started now!{% endtrans %}</div>
+		<a href="{{base}}/publish/create" class="btn btn-success">{% trans %}Create new addon{% endtrans %}</a>
 	</div>
 </div>
 {% endblock %}
