--- a/app/templates/user/table.twig
+++ b/app/templates/user/table.twig
@@ -1,6 +1,6 @@
 {% extends 'root.twig' %}
 
 {% block content %}
-<h1>{% trans "Users" %}</h1>
+<h1>{% trans %}Users{% endtrans %}</h1>
 
 {% endblock %}
