--- a/app/templates/publish/greeter.twig
+++ b/app/templates/publish/greeter.twig
@@ -4,7 +4,7 @@
 <h1>{% trans %}Publish{% endtrans %}</h1>
 <p>{% trans %}After registering you can easily publish your addons here and distribute them via Lorry.{% endtrans %}</p>
 <p>
-	<a href="{{base}}register" class="btn btn-success btn-phone-block btn-large">{% trans %}Register now{% endtrans %}</a>
-	<a href="{{base}}login" class="btn btn-phone-block btn-large">{% trans %}Login{% endtrans %}</a>
+	<a href="{{base}}/register" class="btn btn-success btn-phone-block btn-large">{% trans %}Register now{% endtrans %}</a>
+	<a href="{{base}}/login" class="btn btn-phone-block btn-large">{% trans %}Login{% endtrans %}</a>
 </p>
 {% endblock %}
