--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>{{ username }}</h1>
-<hr class="show-mobile">
+<hr class="visible-phone">
 <div class="row-fluid">
 	<div class="span4">
 		<h2>{% trans "User" %}</h2>
