fixed additional instance of wrong mobile-only hr class

--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -44,10 +44,10 @@
 		{% endif %}
 	</div>
 	<div class="span8">
-		<hr class="show-mobile">
+		<hr class="visible-phone">
 		<h2>{% trans "Addons" %}</h2>
 		<div class="alert alert-warning">{% trans %}This user has not released any addons yet.{% endtrans %}</div>
-		<hr class="show-mobile">
+		<hr class="visible-phone">
 		<h2>{% trans "Comments" %}</h2>
 		<div class="alert alert-warning">{% trans %}This user has not commented yet.{% endtrans %}</div>
 	</div>
